litmask/tests/compile/mask_env_non_literal.stderr
error: mask_env! requires a string literal name
 --> tests/compile/mask_env_non_literal.rs:7:31
  |
7 |     let _: String = mask_env!(name);
  |                               ^^^^
